# azure

./: .gitignore  CMakeLists.txt  README.md
res/: triangles.frag  triangles.vert
src/: Window.h  main.cpp
src/base/: AutoLock.h  CMakeLists.txt  Log.h  Looper.cpp  Looper.h  Time.h
src/frame/: CMakeLists.txt  Choreographer.cpp  Choreographer.h  Fps.h  VSyncDispatcher.cpp  VSyncDispatcher.h  VSyncTracker.cpp  VSyncTracker.h
src/test/: LoadShaders.cpp  LoadShaders.h  TestWindow.cpp  TestWindow.h
